--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "bootstrap": "^5.2.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.7.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.0.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1"
   },
