--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^2.7.4",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.54.2",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1"
